Fixed navbar template (overflow-x and container missing)

--- a/html/common.css
+++ b/html/common.css
@@ -33,7 +33,7 @@ body {
     position: absolute;
     top: -30%;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: -1;
 
@@ -43,6 +43,7 @@ body {
     mask-repeat: no-repeat;
     mask-size: 100% 300vw;
     mask-position: center calc(45% - 4.5vw);
+
 
     -webkit-mask-image: url("./curve.svg");    
     -webkit-mask-repeat: no-repeat;
